--- a/jsPangNotes/Webpack/package.json
+++ b/jsPangNotes/Webpack/package.json
@@ -5,6 +5,7 @@
     "html-webpack-plugin": "^5.5.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
