--- a/2-create custom Element/package.json
+++ b/2-create custom Element/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
+    "script-loader": "^0.7.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
